feat: Enhance macOS preference pane integration with SF Symbols and color customization
- Added GenerateSFSymbolIcon function to create icons using SF Symbols with customizable colors and styles.
- Implemented PrefPaneInfo struct and PrefPaneMappings for better management of macOS preference panes.
- Updated GetPrefPaneIcon to utilize new SF Symbol-based icons instead of traditional loading methods.
- Added internationalization keys for various macOS preference panes in English, Portuguese, Russian, and Chinese.
- Refactored icon rendering logic to ensure proper display of generated icons.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -345,6 +345,47 @@
   "plugin_app_windows_settings_accessibility": "Accessibility",
   "plugin_app_windows_settings_privacy_security": "Privacy & security",
   "plugin_app_windows_settings_windows_update": "Windows Update",
+  "plugin_app_macos_system_settings_subtitle": "System Settings",
+  "plugin_app_macos_prefpane_privacy_security": "Privacy & Security",
+  "plugin_app_macos_prefpane_wifi": "Wi-Fi",
+  "plugin_app_macos_prefpane_notifications": "Notifications",
+  "plugin_app_macos_prefpane_network": "Network",
+  "plugin_app_macos_prefpane_bluetooth": "Bluetooth",
+  "plugin_app_macos_prefpane_sound": "Sound",
+  "plugin_app_macos_prefpane_focus": "Focus",
+  "plugin_app_macos_prefpane_screen_time": "Screen Time",
+  "plugin_app_macos_prefpane_appearance": "Appearance",
+  "plugin_app_macos_prefpane_accessibility": "Accessibility",
+  "plugin_app_macos_prefpane_siri": "Siri",
+  "plugin_app_macos_prefpane_spotlight": "Spotlight",
+  "plugin_app_macos_prefpane_wallpaper": "Wallpaper",
+  "plugin_app_macos_prefpane_displays": "Displays",
+  "plugin_app_macos_prefpane_desktop_dock": "Desktop & Dock",
+  "plugin_app_macos_prefpane_battery": "Battery",
+  "plugin_app_macos_prefpane_energy": "Energy",
+  "plugin_app_macos_prefpane_energy_saver": "Energy Saver",
+  "plugin_app_macos_prefpane_touch_id_password": "Touch ID & Password",
+  "plugin_app_macos_prefpane_users_groups": "Users & Groups",
+  "plugin_app_macos_prefpane_passwords": "Passwords",
+  "plugin_app_macos_prefpane_internet_accounts": "Internet Accounts",
+  "plugin_app_macos_prefpane_wallet_apple_pay": "Wallet & Apple Pay",
+  "plugin_app_macos_prefpane_keyboard": "Keyboard",
+  "plugin_app_macos_prefpane_trackpad": "Trackpad",
+  "plugin_app_macos_prefpane_mouse": "Mouse",
+  "plugin_app_macos_prefpane_printers_scanners": "Printers & Scanners",
+  "plugin_app_macos_prefpane_date_time": "Date & Time",
+  "plugin_app_macos_prefpane_sharing": "Sharing",
+  "plugin_app_macos_prefpane_time_machine": "Time Machine",
+  "plugin_app_macos_prefpane_startup_disk": "Startup Disk",
+  "plugin_app_macos_prefpane_extensions": "Extensions",
+  "plugin_app_macos_prefpane_profiles": "Profiles",
+  "plugin_app_macos_prefpane_software_update": "Software Update",
+  "plugin_app_macos_prefpane_apple_id": "Apple ID",
+  "plugin_app_macos_prefpane_family": "Family",
+  "plugin_app_macos_prefpane_language_region": "Language & Region",
+  "plugin_app_macos_prefpane_cds_dvds": "CDs & DVDs",
+  "plugin_app_macos_prefpane_classroom": "Classroom",
+  "plugin_app_macos_prefpane_classkit": "ClassKit",
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
   "plugin_explorer_open": "Open",
   "plugin_explorer_open_containing_folder": "Open containing folder",
