--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -342,6 +342,47 @@
   "plugin_app_windows_settings_accessibility": "Acessibilidade",
   "plugin_app_windows_settings_privacy_security": "Privacidade e segurança",
   "plugin_app_windows_settings_windows_update": "Windows Update",
+  "plugin_app_macos_system_settings_subtitle": "Ajustes do Sistema",
+  "plugin_app_macos_prefpane_privacy_security": "Privacidade e segurança",
+  "plugin_app_macos_prefpane_wifi": "Wi-Fi",
+  "plugin_app_macos_prefpane_notifications": "Notificações",
+  "plugin_app_macos_prefpane_network": "Rede",
+  "plugin_app_macos_prefpane_bluetooth": "Bluetooth",
+  "plugin_app_macos_prefpane_sound": "Som",
+  "plugin_app_macos_prefpane_focus": "Foco",
+  "plugin_app_macos_prefpane_screen_time": "Tempo de Uso",
+  "plugin_app_macos_prefpane_appearance": "Aparência",
+  "plugin_app_macos_prefpane_accessibility": "Acessibilidade",
+  "plugin_app_macos_prefpane_siri": "Siri",
+  "plugin_app_macos_prefpane_spotlight": "Spotlight",
+  "plugin_app_macos_prefpane_wallpaper": "Papel de parede",
+  "plugin_app_macos_prefpane_displays": "Monitores",
+  "plugin_app_macos_prefpane_desktop_dock": "Mesa e Dock",
+  "plugin_app_macos_prefpane_battery": "Bateria",
+  "plugin_app_macos_prefpane_energy": "Energia",
+  "plugin_app_macos_prefpane_energy_saver": "Economia de energia",
+  "plugin_app_macos_prefpane_touch_id_password": "Touch ID e senha",
+  "plugin_app_macos_prefpane_users_groups": "Usuários e grupos",
+  "plugin_app_macos_prefpane_passwords": "Senhas",
+  "plugin_app_macos_prefpane_internet_accounts": "Contas da Internet",
+  "plugin_app_macos_prefpane_wallet_apple_pay": "Carteira e Apple Pay",
+  "plugin_app_macos_prefpane_keyboard": "Teclado",
+  "plugin_app_macos_prefpane_trackpad": "Trackpad",
+  "plugin_app_macos_prefpane_mouse": "Mouse",
+  "plugin_app_macos_prefpane_printers_scanners": "Impressoras e scanners",
+  "plugin_app_macos_prefpane_date_time": "Data e hora",
+  "plugin_app_macos_prefpane_sharing": "Compartilhamento",
+  "plugin_app_macos_prefpane_time_machine": "Time Machine",
+  "plugin_app_macos_prefpane_startup_disk": "Disco de Inicialização",
+  "plugin_app_macos_prefpane_extensions": "Extensões",
+  "plugin_app_macos_prefpane_profiles": "Perfis",
+  "plugin_app_macos_prefpane_software_update": "Atualização de software",
+  "plugin_app_macos_prefpane_apple_id": "Apple ID",
+  "plugin_app_macos_prefpane_family": "Família",
+  "plugin_app_macos_prefpane_language_region": "Idioma e região",
+  "plugin_app_macos_prefpane_cds_dvds": "CDs e DVDs",
+  "plugin_app_macos_prefpane_classroom": "Sala de aula",
+  "plugin_app_macos_prefpane_classkit": "ClassKit",
   "plugin_browser_bookmark_open_in_browser": "Abrir no navegador",
   "plugin_explorer_open": "Abrir",
   "plugin_explorer_open_containing_folder": "Abrir pasta contendo",
