--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -342,6 +342,47 @@
   "plugin_app_windows_settings_accessibility": "Специальные возможности",
   "plugin_app_windows_settings_privacy_security": "Конфиденциальность и безопасность",
   "plugin_app_windows_settings_windows_update": "Центр обновления Windows",
+  "plugin_app_macos_system_settings_subtitle": "Системные настройки",
+  "plugin_app_macos_prefpane_privacy_security": "Конфиденциальность и безопасность",
+  "plugin_app_macos_prefpane_wifi": "Wi-Fi",
+  "plugin_app_macos_prefpane_notifications": "Уведомления",
+  "plugin_app_macos_prefpane_network": "Сеть",
+  "plugin_app_macos_prefpane_bluetooth": "Bluetooth",
+  "plugin_app_macos_prefpane_sound": "Звук",
+  "plugin_app_macos_prefpane_focus": "Фокус",
+  "plugin_app_macos_prefpane_screen_time": "Экранное время",
+  "plugin_app_macos_prefpane_appearance": "Внешний вид",
+  "plugin_app_macos_prefpane_accessibility": "Универсальный доступ",
+  "plugin_app_macos_prefpane_siri": "Siri",
+  "plugin_app_macos_prefpane_spotlight": "Spotlight",
+  "plugin_app_macos_prefpane_wallpaper": "Обои",
+  "plugin_app_macos_prefpane_displays": "Дисплеи",
+  "plugin_app_macos_prefpane_desktop_dock": "Рабочий стол и Dock",
+  "plugin_app_macos_prefpane_battery": "Аккумулятор",
+  "plugin_app_macos_prefpane_energy": "Энергосбережение",
+  "plugin_app_macos_prefpane_energy_saver": "Энергосбережение",
+  "plugin_app_macos_prefpane_touch_id_password": "Touch ID и пароль",
+  "plugin_app_macos_prefpane_users_groups": "Пользователи и группы",
+  "plugin_app_macos_prefpane_passwords": "Пароли",
+  "plugin_app_macos_prefpane_internet_accounts": "Интернет-аккаунты",
+  "plugin_app_macos_prefpane_wallet_apple_pay": "Wallet и Apple Pay",
+  "plugin_app_macos_prefpane_keyboard": "Клавиатура",
+  "plugin_app_macos_prefpane_trackpad": "Трекпад",
+  "plugin_app_macos_prefpane_mouse": "Мышь",
+  "plugin_app_macos_prefpane_printers_scanners": "Принтеры и сканеры",
+  "plugin_app_macos_prefpane_date_time": "Дата и время",
+  "plugin_app_macos_prefpane_sharing": "Общий доступ",
+  "plugin_app_macos_prefpane_time_machine": "Time Machine",
+  "plugin_app_macos_prefpane_startup_disk": "Диск загрузки",
+  "plugin_app_macos_prefpane_extensions": "Расширения",
+  "plugin_app_macos_prefpane_profiles": "Профили",
+  "plugin_app_macos_prefpane_software_update": "Обновление ПО",
+  "plugin_app_macos_prefpane_apple_id": "Apple ID",
+  "plugin_app_macos_prefpane_family": "Семья",
+  "plugin_app_macos_prefpane_language_region": "Язык и регион",
+  "plugin_app_macos_prefpane_cds_dvds": "CD и DVD",
+  "plugin_app_macos_prefpane_classroom": "Класс",
+  "plugin_app_macos_prefpane_classkit": "ClassKit",
   "plugin_browser_bookmark_open_in_browser": "Открыть в браузере",
   "plugin_explorer_open": "Открыть",
   "plugin_explorer_open_containing_folder": "Открыть содержащую папку",
