--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -346,6 +346,47 @@
   "plugin_app_windows_settings_accessibility": "辅助功能",
   "plugin_app_windows_settings_privacy_security": "隐私和安全性",
   "plugin_app_windows_settings_windows_update": "Windows 更新",
+  "plugin_app_macos_system_settings_subtitle": "系统设置",
+  "plugin_app_macos_prefpane_privacy_security": "隐私与安全",
+  "plugin_app_macos_prefpane_wifi": "无线局域网",
+  "plugin_app_macos_prefpane_notifications": "通知",
+  "plugin_app_macos_prefpane_network": "网络",
+  "plugin_app_macos_prefpane_bluetooth": "蓝牙",
+  "plugin_app_macos_prefpane_sound": "声音",
+  "plugin_app_macos_prefpane_focus": "专注",
+  "plugin_app_macos_prefpane_screen_time": "屏幕使用时间",
+  "plugin_app_macos_prefpane_appearance": "外观",
+  "plugin_app_macos_prefpane_accessibility": "辅助功能",
+  "plugin_app_macos_prefpane_siri": "Siri",
+  "plugin_app_macos_prefpane_spotlight": "聚焦",
+  "plugin_app_macos_prefpane_wallpaper": "墙纸",
+  "plugin_app_macos_prefpane_displays": "显示器",
+  "plugin_app_macos_prefpane_desktop_dock": "桌面与程序坞",
+  "plugin_app_macos_prefpane_battery": "电池",
+  "plugin_app_macos_prefpane_energy": "节能",
+  "plugin_app_macos_prefpane_energy_saver": "节能器",
+  "plugin_app_macos_prefpane_touch_id_password": "触控 ID 与密码",
+  "plugin_app_macos_prefpane_users_groups": "用户与群组",
+  "plugin_app_macos_prefpane_passwords": "密码",
+  "plugin_app_macos_prefpane_internet_accounts": "互联网账户",
+  "plugin_app_macos_prefpane_wallet_apple_pay": "钱包与 Apple Pay",
+  "plugin_app_macos_prefpane_keyboard": "键盘",
+  "plugin_app_macos_prefpane_trackpad": "触控板",
+  "plugin_app_macos_prefpane_mouse": "鼠标",
+  "plugin_app_macos_prefpane_printers_scanners": "打印机与扫描仪",
+  "plugin_app_macos_prefpane_date_time": "日期与时间",
+  "plugin_app_macos_prefpane_sharing": "共享",
+  "plugin_app_macos_prefpane_time_machine": "时间机器",
+  "plugin_app_macos_prefpane_startup_disk": "启动磁盘",
+  "plugin_app_macos_prefpane_extensions": "扩展",
+  "plugin_app_macos_prefpane_profiles": "描述文件",
+  "plugin_app_macos_prefpane_software_update": "软件更新",
+  "plugin_app_macos_prefpane_apple_id": "Apple ID",
+  "plugin_app_macos_prefpane_family": "家庭",
+  "plugin_app_macos_prefpane_language_region": "语言与地区",
+  "plugin_app_macos_prefpane_cds_dvds": "CD 与 DVD",
+  "plugin_app_macos_prefpane_classroom": "课堂",
+  "plugin_app_macos_prefpane_classkit": "ClassKit",
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
   "plugin_explorer_open": "打开",
   "plugin_explorer_open_containing_folder": "打开所在文件夹",
