feat: Refactor macOS preference pane integration and add new system settings

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -383,15 +383,28 @@
   "plugin_app_macos_prefpane_cds_dvds": "CDs e DVDs",
   "plugin_app_macos_prefpane_classroom": "Sala de aula",
   "plugin_app_macos_prefpane_classkit": "ClassKit",
+  "plugin_app_macos_prefpane_vpn": "VPN",
+  "plugin_app_macos_prefpane_general": "Geral",
+  "plugin_app_macos_prefpane_control_center": "Central de Controle",
+  "plugin_app_macos_prefpane_screen_saver": "Protetor de Tela",
+  "plugin_app_macos_prefpane_lock_screen": "Tela de Bloqueio",
+  "plugin_app_macos_prefpane_game_center": "Game Center",
+  "plugin_app_macos_prefpane_about": "Sobre",
+  "plugin_app_macos_prefpane_storage": "Armazenamento",
+  "plugin_app_macos_prefpane_airdrop_handoff": "AirDrop e Handoff",
+  "plugin_app_macos_prefpane_login_items": "Itens de Início e Extensões",
+  "plugin_app_macos_prefpane_transfer_reset": "Transferir ou Redefinir",
+  "plugin_app_macos_prefpane_voiceover": "VoiceOver",
+  "plugin_app_macos_prefpane_zoom": "Zoom",
+  "plugin_app_macos_prefpane_accessibility_display": "Tela (Acessibilidade)",
+  "plugin_app_macos_prefpane_spoken_content": "Conteúdo Falado",
+  "plugin_app_macos_prefpane_voice_control": "Controle por Voz",
+  "plugin_app_macos_prefpane_accessibility_keyboard": "Teclado (Acessibilidade)",
+  "plugin_app_macos_prefpane_pointer_control": "Controle do Cursor",
+  "plugin_app_macos_prefpane_switch_control": "Controle Assistivo",
   "plugin_browser_bookmark_open_in_browser": "Abrir no navegador",
   "plugin_explorer_open": "Abrir",
   "plugin_explorer_open_containing_folder": "Abrir pasta contendo",
-  "plugin_clipboard_copy_date": "Copiar data",
-  "plugin_clipboard_copy_characters": "Copiar caracteres",
-  "plugin_clipboard_image_width": "Largura da imagem",
-  "plugin_clipboard_image_height": "Altura da imagem",
-  "plugin_clipboard_image_size": "Tamanho da imagem",
-  "plugin_clipboard_keep_text_history": "Manter histórico de texto por",
   "plugin_clipboard_days": "dias",
   "plugin_clipboard_keep_image_history": "Manter histórico de imagens por",
   "plugin_clipboard_primary_action": "Ação principal",
