--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -383,15 +383,28 @@
   "plugin_app_macos_prefpane_cds_dvds": "CD и DVD",
   "plugin_app_macos_prefpane_classroom": "Класс",
   "plugin_app_macos_prefpane_classkit": "ClassKit",
+  "plugin_app_macos_prefpane_vpn": "VPN",
+  "plugin_app_macos_prefpane_general": "Основные",
+  "plugin_app_macos_prefpane_control_center": "Пункт управления",
+  "plugin_app_macos_prefpane_screen_saver": "Заставка",
+  "plugin_app_macos_prefpane_lock_screen": "Экран блокировки",
+  "plugin_app_macos_prefpane_game_center": "Game Center",
+  "plugin_app_macos_prefpane_about": "Об этом Mac",
+  "plugin_app_macos_prefpane_storage": "Хранилище",
+  "plugin_app_macos_prefpane_airdrop_handoff": "AirPlay и Handoff",
+  "plugin_app_macos_prefpane_login_items": "Объекты входа и расширения",
+  "plugin_app_macos_prefpane_transfer_reset": "Перенос или сброс",
+  "plugin_app_macos_prefpane_voiceover": "VoiceOver",
+  "plugin_app_macos_prefpane_zoom": "Увеличение",
+  "plugin_app_macos_prefpane_accessibility_display": "Монитор (Универсальный доступ)",
+  "plugin_app_macos_prefpane_spoken_content": "Проговаривание текста",
+  "plugin_app_macos_prefpane_voice_control": "Управление голосом",
+  "plugin_app_macos_prefpane_accessibility_keyboard": "Клавиатура (Универсальный доступ)",
+  "plugin_app_macos_prefpane_pointer_control": "Управление указателем",
+  "plugin_app_macos_prefpane_switch_control": "Виртуальный контроллер",
   "plugin_browser_bookmark_open_in_browser": "Открыть в браузере",
   "plugin_explorer_open": "Открыть",
   "plugin_explorer_open_containing_folder": "Открыть содержащую папку",
-  "plugin_clipboard_copy_date": "Копировать дату",
-  "plugin_clipboard_copy_characters": "Копировать символы",
-  "plugin_clipboard_image_width": "Ширина изображения",
-  "plugin_clipboard_image_height": "Высота изображения",
-  "plugin_clipboard_image_size": "Размер изображения",
-  "plugin_clipboard_keep_text_history": "Сохранять историю текста на",
   "plugin_clipboard_days": "дней",
   "plugin_clipboard_keep_image_history": "Сохранять историю изображений на",
   "plugin_clipboard_primary_action": "Основное действие",
