--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -387,6 +387,25 @@
   "plugin_app_macos_prefpane_cds_dvds": "CD 与 DVD",
   "plugin_app_macos_prefpane_classroom": "课堂",
   "plugin_app_macos_prefpane_classkit": "ClassKit",
+  "plugin_app_macos_prefpane_vpn": "VPN",
+  "plugin_app_macos_prefpane_general": "通用",
+  "plugin_app_macos_prefpane_control_center": "控制中心",
+  "plugin_app_macos_prefpane_screen_saver": "屏幕保护程序",
+  "plugin_app_macos_prefpane_lock_screen": "锁定屏幕",
+  "plugin_app_macos_prefpane_game_center": "Game Center",
+  "plugin_app_macos_prefpane_about": "关于本机",
+  "plugin_app_macos_prefpane_storage": "储存空间",
+  "plugin_app_macos_prefpane_airdrop_handoff": "隔空投送与接力",
+  "plugin_app_macos_prefpane_login_items": "登录项与扩展",
+  "plugin_app_macos_prefpane_transfer_reset": "传输或还原",
+  "plugin_app_macos_prefpane_voiceover": "旁白",
+  "plugin_app_macos_prefpane_zoom": "缩放",
+  "plugin_app_macos_prefpane_accessibility_display": "显示 (辅助功能)",
+  "plugin_app_macos_prefpane_spoken_content": "朗读内容",
+  "plugin_app_macos_prefpane_voice_control": "语音控制",
+  "plugin_app_macos_prefpane_accessibility_keyboard": "键盘 (辅助功能)",
+  "plugin_app_macos_prefpane_pointer_control": "指针控制",
+  "plugin_app_macos_prefpane_switch_control": "切换控制",
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
   "plugin_explorer_open": "打开",
   "plugin_explorer_open_containing_folder": "打开所在文件夹",
