--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -386,6 +386,25 @@
   "plugin_app_macos_prefpane_cds_dvds": "CDs & DVDs",
   "plugin_app_macos_prefpane_classroom": "Classroom",
   "plugin_app_macos_prefpane_classkit": "ClassKit",
+  "plugin_app_macos_prefpane_vpn": "VPN",
+  "plugin_app_macos_prefpane_general": "General",
+  "plugin_app_macos_prefpane_control_center": "Control Center",
+  "plugin_app_macos_prefpane_screen_saver": "Screen Saver",
+  "plugin_app_macos_prefpane_lock_screen": "Lock Screen",
+  "plugin_app_macos_prefpane_game_center": "Game Center",
+  "plugin_app_macos_prefpane_about": "About",
+  "plugin_app_macos_prefpane_storage": "Storage",
+  "plugin_app_macos_prefpane_airdrop_handoff": "AirDrop & Handoff",
+  "plugin_app_macos_prefpane_login_items": "Login Items & Extensions",
+  "plugin_app_macos_prefpane_transfer_reset": "Transfer or Reset",
+  "plugin_app_macos_prefpane_voiceover": "VoiceOver",
+  "plugin_app_macos_prefpane_zoom": "Zoom",
+  "plugin_app_macos_prefpane_accessibility_display": "Display (Accessibility)",
+  "plugin_app_macos_prefpane_spoken_content": "Spoken Content",
+  "plugin_app_macos_prefpane_voice_control": "Voice Control",
+  "plugin_app_macos_prefpane_accessibility_keyboard": "Keyboard (Accessibility)",
+  "plugin_app_macos_prefpane_pointer_control": "Pointer Control",
+  "plugin_app_macos_prefpane_switch_control": "Switch Control",
   "plugin_browser_bookmark_open_in_browser": "Open in browser",
   "plugin_explorer_open": "Open",
   "plugin_explorer_open_containing_folder": "Open containing folder",
