feat: Add support for detecting open/save dialog across platforms

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -301,6 +301,13 @@
   "plugin_emoji_plugin_description": "Search and copy emojis",
   "plugin_explorer_plugin_name": "Current Folder Search",
   "plugin_explorer_plugin_description": "Search files in the currently active file manager window",
+  "plugin_explorer_common_folder_home": "Home",
+  "plugin_explorer_common_folder_desktop": "Desktop",
+  "plugin_explorer_common_folder_documents": "Documents",
+  "plugin_explorer_common_folder_downloads": "Downloads",
+  "plugin_explorer_common_folder_pictures": "Pictures",
+  "plugin_explorer_common_folder_music": "Music",
+  "plugin_explorer_common_folder_videos": "Videos",
   "plugin_file_plugin_name": "Files",
   "plugin_file_plugin_description": "Search files in your computer",
   "plugin_indicator_plugin_name": "System Plugin Indicator",
