--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -298,6 +298,13 @@
   "plugin_emoji_plugin_description": "Pesquisar e copiar emojis",
   "plugin_explorer_plugin_name": "Pesquisa na pasta atual",
   "plugin_explorer_plugin_description": "Pesquisar arquivos na janela do gerenciador de arquivos ativa no momento",
+  "plugin_explorer_common_folder_home": "Início",
+  "plugin_explorer_common_folder_desktop": "Área de trabalho",
+  "plugin_explorer_common_folder_documents": "Documentos",
+  "plugin_explorer_common_folder_downloads": "Downloads",
+  "plugin_explorer_common_folder_pictures": "Imagens",
+  "plugin_explorer_common_folder_music": "Música",
+  "plugin_explorer_common_folder_videos": "Vídeos",
   "plugin_file_plugin_name": "Arquivos",
   "plugin_file_plugin_description": "Pesquisar arquivos no seu computador",
   "plugin_indicator_plugin_name": "Indicador de plugins do sistema",
