--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -298,6 +298,13 @@
   "plugin_emoji_plugin_description": "Поиск и копирование эмодзи",
   "plugin_explorer_plugin_name": "Поиск в текущей папке",
   "plugin_explorer_plugin_description": "Поиск файлов в активном окне файлового менеджера",
+  "plugin_explorer_common_folder_home": "Домашняя папка",
+  "plugin_explorer_common_folder_desktop": "Рабочий стол",
+  "plugin_explorer_common_folder_documents": "Документы",
+  "plugin_explorer_common_folder_downloads": "Загрузки",
+  "plugin_explorer_common_folder_pictures": "Изображения",
+  "plugin_explorer_common_folder_music": "Музыка",
+  "plugin_explorer_common_folder_videos": "Видео",
   "plugin_file_plugin_name": "Файлы",
   "plugin_file_plugin_description": "Поиск файлов на вашем компьютере",
   "plugin_indicator_plugin_name": "Индикатор системных плагинов",
