--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -301,6 +301,13 @@
   "plugin_emoji_plugin_description": "搜索并复制表情符号",
   "plugin_explorer_plugin_name": "当前文件夹搜索",
   "plugin_explorer_plugin_description": "在当前活动的文件管理器窗口中搜索文件",
+  "plugin_explorer_common_folder_home": "主目录",
+  "plugin_explorer_common_folder_desktop": "桌面",
+  "plugin_explorer_common_folder_documents": "文档",
+  "plugin_explorer_common_folder_downloads": "下载",
+  "plugin_explorer_common_folder_pictures": "图片",
+  "plugin_explorer_common_folder_music": "音乐",
+  "plugin_explorer_common_folder_videos": "视频",
   "plugin_file_plugin_name": "文件",
   "plugin_file_plugin_description": "搜索电脑中的文件",
   "plugin_indicator_plugin_name": "系统插件指示器",
