feat: add "Jump to" functionality in file explorer plugins
- Added "Jump to" action in English, Portuguese, Russian, and Chinese language files.
- Enhanced macOS window handling to support file dialog navigation and Finder window management.
- Removed obsolete dialog handling files for macOS and other platforms.
- Consolidated file explorer functionality for Windows and macOS, ensuring consistent behavior across platforms.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -412,6 +412,7 @@
   "plugin_browser_bookmark_open_in_browser": "Abrir no navegador",
   "plugin_explorer_open": "Abrir",
   "plugin_explorer_open_containing_folder": "Abrir pasta contendo",
+  "plugin_explorer_jump_to": "Ir para",
   "plugin_indicator_activate": "Ativar",
   "plugin_indicator_activate_plugin": "Ativar o plugin %s",
   "plugin_paste_to_window": "Colar em %s",
