--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -416,6 +416,7 @@
   "plugin_browser_bookmark_open_in_browser": "在浏览器中打开",
   "plugin_explorer_open": "打开",
   "plugin_explorer_open_containing_folder": "打开所在文件夹",
+  "plugin_explorer_jump_to": "跳转到",
   "plugin_clipboard_copy_date": "复制日期",
   "plugin_clipboard_copy_characters": "复制字符",
   "plugin_clipboard_image_width": "图片宽度",
