feat: enhance script plugin creation with template rendering and improved error handling

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -607,9 +607,11 @@
   "plugin_wpm_group_regular_plugins": "Regular Plugins (full featured plugins)",
   "plugin_wpm_group_script_plugins": "Script Plugins (single-file script plugins)",
   "plugin_wpm_script_plugin_created_success": "Script plugin created successfully: %s",
+  "plugin_wpm_script_plugin_opened_directory": "Opened the folder. Please edit: %s",
   "plugin_wpm_create_script_file_failed": "Failed to create script file: %s",
   "plugin_wpm_copying_template": "Copying template...",
   "plugin_wpm_read_template_failed": "Failed to read template file: %s",
+  "plugin_wpm_render_template_failed": "Failed to render template: %s",
   "plugin_wpm_overwriting_script_plugin": "Overwriting existing script plugin: %s",
   "plugin_wpm_plugin_name_empty": "Plugin name cannot be empty",
   "plugin_wpm_command_dev_list": "List local Wox plugins",
