--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -574,9 +574,11 @@
   "plugin_wpm_group_regular_plugins": "Plugins Regulares (plugins com funcionalidade completa)",
   "plugin_wpm_group_script_plugins": "Plugins de Script (plugins de script de um único arquivo)",
   "plugin_wpm_script_plugin_created_success": "Plugin de script criado com sucesso: %s",
+  "plugin_wpm_script_plugin_opened_directory": "Pasta aberta. Edite: %s",
   "plugin_wpm_create_script_file_failed": "Falha ao criar arquivo de script: %s",
   "plugin_wpm_copying_template": "Copiando modelo...",
   "plugin_wpm_read_template_failed": "Falha ao ler arquivo de modelo: %s",
+  "plugin_wpm_render_template_failed": "Falha ao renderizar o modelo: %s",
   "plugin_wpm_overwriting_script_plugin": "Sobrescrevendo plugin de script existente: %s",
   "plugin_wpm_plugin_name_empty": "O nome do plugin não pode estar vazio",
   "plugin_wpm_command_dev_list": "Listar plugins locais do Wox",
