--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -574,9 +574,11 @@
   "plugin_wpm_group_regular_plugins": "Обычные плагины (плагины с полной функциональностью)",
   "plugin_wpm_group_script_plugins": "Скриптовые плагины (однофайловые скриптовые плагины)",
   "plugin_wpm_script_plugin_created_success": "Скриптовый плагин успешно создан: %s",
+  "plugin_wpm_script_plugin_opened_directory": "Папка открыта. Отредактируйте: %s",
   "plugin_wpm_create_script_file_failed": "Не удалось создать файл скрипта: %s",
   "plugin_wpm_copying_template": "Копирование шаблона...",
   "plugin_wpm_read_template_failed": "Не удалось прочитать файл шаблона: %s",
+  "plugin_wpm_render_template_failed": "Не удалось отрендерить шаблон: %s",
   "plugin_wpm_overwriting_script_plugin": "Перезапись существующего скриптового плагина: %s",
   "plugin_wpm_plugin_name_empty": "Имя плагина не может быть пустым",
   "plugin_wpm_command_dev_list": "Список локальных плагинов Wox",
