--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -608,9 +608,11 @@
   "plugin_wpm_group_regular_plugins": "常规插件 (全功能插件)",
   "plugin_wpm_group_script_plugins": "脚本插件 (轻量单文件插件)",
   "plugin_wpm_script_plugin_created_success": "脚本插件创建成功：%s",
+  "plugin_wpm_script_plugin_opened_directory": "已打开目录，请编辑：%s",
   "plugin_wpm_create_script_file_failed": "创建脚本文件失败：%s",
   "plugin_wpm_copying_template": "正在复制模板...",
   "plugin_wpm_read_template_failed": "读取模板文件失败：%s",
+  "plugin_wpm_render_template_failed": "渲染模板失败：%s",
   "plugin_wpm_overwriting_script_plugin": "正在覆盖现有脚本插件：%s",
   "plugin_wpm_plugin_name_empty": "插件名称不能为空",
   "plugin_wpm_command_dev_list": "列出本地 Wox 插件",
