feat: add internationalization support for clipboard plugin groups in multiple languages

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -437,6 +437,10 @@
   "plugin_clipboard_edit_alias": "Edit alias",
   "plugin_clipboard_edit_alias_label": "Alias",
   "plugin_clipboard_edit_alias_hint": "Set a custom alias for this item",
+  "plugin_clipboard_group_favorites": "Favorites",
+  "plugin_clipboard_group_today": "Today",
+  "plugin_clipboard_group_yesterday": "Yesterday",
+  "plugin_clipboard_group_history": "History",
   "plugin_indicator_activate": "Activate",
   "plugin_indicator_activate_plugin": "Activate the %s plugin",
   "plugin_paste_to_window": "Paste to %s",
