--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -778,6 +778,10 @@
   "plugin_clipboard_edit_alias": "Editar alias",
   "plugin_clipboard_edit_alias_label": "Alias",
   "plugin_clipboard_edit_alias_hint": "Definir um alias personalizado para este item",
+  "plugin_clipboard_group_favorites": "Favoritos",
+  "plugin_clipboard_group_today": "Hoje",
+  "plugin_clipboard_group_yesterday": "Ontem",
+  "plugin_clipboard_group_history": "Histórico",
   "ui_not_supported_field": "Tipo de campo não suportado",
   "ui_ai_chat_show_sidebar": "Show Sidebar",
   "ui_ai_chat_hide_sidebar": "Ocultar Barra Lateral",
