--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -777,6 +777,10 @@
   "plugin_clipboard_edit_alias": "Редактировать псевдоним",
   "plugin_clipboard_edit_alias_label": "Псевдоним",
   "plugin_clipboard_edit_alias_hint": "Установить пользовательский псевдоним для этого элемента",
+  "plugin_clipboard_group_favorites": "Избранное",
+  "plugin_clipboard_group_today": "Сегодня",
+  "plugin_clipboard_group_yesterday": "Вчера",
+  "plugin_clipboard_group_history": "История",
   "ui_not_supported_field": "Тип поля не поддерживается",
   "ui_ai_chat_show_sidebar": "Show Sidebar",
   "ui_ai_chat_hide_sidebar": "Скрыть боковую панель",
