--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -438,6 +438,10 @@
   "plugin_clipboard_edit_alias": "编辑别名",
   "plugin_clipboard_edit_alias_label": "别名",
   "plugin_clipboard_edit_alias_hint": "为此项设置自定义别名",
+  "plugin_clipboard_group_favorites": "收藏",
+  "plugin_clipboard_group_today": "今天",
+  "plugin_clipboard_group_yesterday": "昨天",
+  "plugin_clipboard_group_history": "历史",
   "plugin_indicator_activate": "激活",
   "plugin_indicator_activate_plugin": "激活%s插件",
   "plugin_paste_to_window": "粘贴到%s",
