feat: implement database recovery functionality and enhance doctor plugin actions

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -556,6 +556,11 @@
   "plugin_doctor_database_desc_quickcheck": "quick_check issues: %d",
   "plugin_doctor_database_desc_fk": "foreign key violations: %d",
   "plugin_doctor_database_desc_tables": "affected tables: %s",
+  "plugin_doctor_database_repair_action": "Attempt repair",
+  "plugin_doctor_database_repair_start": "Repairing database...",
+  "plugin_doctor_database_repair_success": "Database repaired. Restart Wox to apply the recovered database.",
+  "plugin_doctor_database_repair_failed": "Database repair failed. Check logs for details.",
+  "plugin_doctor_database_repair_manual": "Recovered database created at: %s. Please quit Wox and replace wox.db manually.",
   "plugin_doctor_database_action": "Show fix guidance",
   "plugin_doctor_database_fix_guidance": "Possible database inconsistency detected (often occurs when the database is stored in a cloud sync drive). We recommend restoring the database from a backup and avoiding placing the data directory under iCloud/Dropbox or similar sync paths. Detailed errors have been logged.",
   "plugin_mediaplayer_duration": "Duration",
