--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -520,6 +520,11 @@
   "plugin_doctor_database_desc_quickcheck": "problemas no quick_check: %d",
   "plugin_doctor_database_desc_fk": "violações de chave estrangeira: %d",
   "plugin_doctor_database_desc_tables": "tabelas afetadas: %s",
+  "plugin_doctor_database_repair_action": "Tentar reparar",
+  "plugin_doctor_database_repair_start": "Reparando o banco de dados...",
+  "plugin_doctor_database_repair_success": "Banco de dados reparado. Reinicie o Wox para aplicar o banco recuperado.",
+  "plugin_doctor_database_repair_failed": "Falha ao reparar o banco de dados. Verifique os logs para detalhes.",
+  "plugin_doctor_database_repair_manual": "Banco recuperado criado em: %s. Encerre o Wox e substitua o wox.db manualmente.",
   "plugin_doctor_database_action": "Mostrar orientação de correção",
   "plugin_doctor_database_fix_guidance": "Possível inconsistência no banco de dados detectada (geralmente ocorre quando o banco de dados está em uma pasta com sincronização em nuvem). Recomendamos restaurar o banco de dados a partir de um backup e evitar colocar o diretório de dados em iCloud/Dropbox ou caminhos de sincronização semelhantes. Erros detalhados foram registrados nos logs.",
   "plugin_query_history_use": "Usar",
