--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -554,6 +554,11 @@
   "plugin_doctor_database_desc_quickcheck": "quick_check 问题数：%d",
   "plugin_doctor_database_desc_fk": "外键违规：%d",
   "plugin_doctor_database_desc_tables": "受影响的表：%s",
+  "plugin_doctor_database_repair_action": "尝试修复",
+  "plugin_doctor_database_repair_start": "正在修复数据库...",
+  "plugin_doctor_database_repair_success": "数据库已修复。请重启 Wox 以应用修复后的数据库。",
+  "plugin_doctor_database_repair_failed": "数据库修复失败。请查看日志了解详情。",
+  "plugin_doctor_database_repair_manual": "已生成修复后的数据库：%s。请退出 Wox 并手动替换 wox.db。",
   "plugin_doctor_database_action": "查看修复建议",
   "plugin_doctor_database_fix_guidance": "检测到数据库可能不完整（常见于将数据库放在云同步网盘时）。建议从备份恢复数据库，并避免将数据目录放在 iCloud/Dropbox 等同步路径。详细错误已记录到日志。",
   "plugin_mediaplayer_duration": "时长",
