--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -520,6 +520,11 @@
   "plugin_doctor_database_desc_quickcheck": "проблемы quick_check: %d",
   "plugin_doctor_database_desc_fk": "нарушения внешних ключей: %d",
   "plugin_doctor_database_desc_tables": "затронутые таблицы: %s",
+  "plugin_doctor_database_repair_action": "Попробовать восстановить",
+  "plugin_doctor_database_repair_start": "Восстановление базы данных...",
+  "plugin_doctor_database_repair_success": "База данных восстановлена. Перезапустите Wox, чтобы применить восстановленную базу.",
+  "plugin_doctor_database_repair_failed": "Не удалось восстановить базу данных. Подробности в журнале.",
+  "plugin_doctor_database_repair_manual": "Восстановленная база создана в: %s. Закройте Wox и вручную замените wox.db.",
   "plugin_doctor_database_action": "Показать рекомендации по исправлению",
   "plugin_doctor_database_fix_guidance": "Обнаружена возможная несогласованность базы данных (часто происходит, если база данных хранится в папке, синхронизируемой с облаком). Рекомендуется восстановить базу данных из резервной копии и избегать размещения каталога данных в iCloud/Dropbox или аналогичных путях синхронизации. Подробные ошибки записаны в журнал.",
   "plugin_query_history_use": "Использовать",
