--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -527,6 +527,7 @@
   "plugin_update_notify_up_to_date": "Up to date",
   "plugin_update_notify_error": "Update error: %s",
   "plugin_update_status_none": "Up to date",
+  "plugin_update_status_none_with_version": "Up to date (%s)",
   "plugin_update_status_available": "Update available",
   "plugin_update_status_downloading": "Downloading...",
   "plugin_update_status_ready": "Ready to install",
