--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -491,6 +491,7 @@
   "plugin_update_notify_up_to_date": "Já está atualizado",
   "plugin_update_notify_error": "Erro de atualização: %s",
   "plugin_update_status_none": "Já está atualizado",
+  "plugin_update_status_none_with_version": "Já está atualizado (%s)",
   "plugin_update_status_available": "Atualização disponível",
   "plugin_update_status_downloading": "Baixando...",
   "plugin_update_status_ready": "Pronto para instalar",
