--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -491,6 +491,7 @@
   "plugin_update_notify_up_to_date": "Уже обновлено",
   "plugin_update_notify_error": "Ошибка обновления: %s",
   "plugin_update_status_none": "Уже обновлено",
+  "plugin_update_status_none_with_version": "Уже обновлено (%s)",
   "plugin_update_status_available": "Доступно обновление",
   "plugin_update_status_downloading": "Загрузка...",
   "plugin_update_status_ready": "Готово к установке",
