--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -525,6 +525,7 @@
   "plugin_update_notify_up_to_date": "已是最新版本",
   "plugin_update_notify_error": "更新错误：%s",
   "plugin_update_status_none": "已是最新版本",
+  "plugin_update_status_none_with_version": "已是最新版本 (%s)",
   "plugin_update_status_available": "发现新版本",
   "plugin_update_status_downloading": "下载中…",
   "plugin_update_status_ready": "可安装",
