--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -28,6 +28,7 @@
   "ui_hide_on_lost_focus_tips": "При выборе Wox будет скрываться при потере фокуса",
   "ui_hide_on_start": "Скрывать при запуске",
   "ui_hide_on_start_tips": "При выборе Wox будет скрываться при запуске",
+  "ui_update_success": "Успешное обновление до последней версии",
   "ui_show_tray": "Показать значок в трее",
   "ui_show_tray_tips": "При выборе Wox будет показывать значок в трее",
   "ui_show_position": "Положение",
