feat: enhance update process with progress notifications during application

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -525,6 +525,10 @@
   "plugin_update_notify_checking": "Checking for updates...",
   "plugin_update_notify_downloading": "Downloading update...",
   "plugin_update_notify_ready": "Update is ready to install",
+  "plugin_update_notify_apply_preparing": "Preparing update...",
+  "plugin_update_notify_apply_extracting": "Extracting update...",
+  "plugin_update_notify_apply_replacing": "Replacing application...",
+  "plugin_update_notify_apply_restarting": "Restarting Wox...",
   "plugin_update_notify_up_to_date": "Up to date",
   "plugin_update_notify_error": "Update error: %s",
   "plugin_update_status_none": "Up to date",
