--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -489,6 +489,10 @@
   "plugin_update_notify_checking": "Verificando atualizações...",
   "plugin_update_notify_downloading": "Baixando atualização...",
   "plugin_update_notify_ready": "Atualização pronta para instalar",
+  "plugin_update_notify_apply_preparing": "Preparando atualização...",
+  "plugin_update_notify_apply_extracting": "Extraindo atualização...",
+  "plugin_update_notify_apply_replacing": "Substituindo aplicativo...",
+  "plugin_update_notify_apply_restarting": "Reiniciando o Wox...",
   "plugin_update_notify_up_to_date": "Já está atualizado",
   "plugin_update_notify_error": "Erro de atualização: %s",
   "plugin_update_status_none": "Já está atualizado",
