--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -489,6 +489,10 @@
   "plugin_update_notify_checking": "Проверка обновлений...",
   "plugin_update_notify_downloading": "Загрузка обновления...",
   "plugin_update_notify_ready": "Обновление готово к установке",
+  "plugin_update_notify_apply_preparing": "Подготовка обновления...",
+  "plugin_update_notify_apply_extracting": "Распаковка обновления...",
+  "plugin_update_notify_apply_replacing": "Замена приложения...",
+  "plugin_update_notify_apply_restarting": "Перезапуск Wox...",
   "plugin_update_notify_up_to_date": "Уже обновлено",
   "plugin_update_notify_error": "Ошибка обновления: %s",
   "plugin_update_status_none": "Уже обновлено",
