--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -523,6 +523,10 @@
   "plugin_update_notify_checking": "正在检查更新…",
   "plugin_update_notify_downloading": "正在下载更新…",
   "plugin_update_notify_ready": "更新已就绪，可安装",
+  "plugin_update_notify_apply_preparing": "正在准备更新…",
+  "plugin_update_notify_apply_extracting": "正在提取更新…",
+  "plugin_update_notify_apply_replacing": "正在替换应用程序…",
+  "plugin_update_notify_apply_restarting": "正在重启 Wox…",
   "plugin_update_notify_up_to_date": "已是最新版本",
   "plugin_update_notify_error": "更新错误：%s",
   "plugin_update_status_none": "已是最新版本",
