--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -546,6 +546,8 @@
   "plugin_wpm_uninstall": "Удалить",
   "plugin_wpm_install": "Установить",
   "plugin_wpm_upgrade": "Обновить",
+  "plugin_wpm_visit_website": "Посетить сайт",
+  "plugin_wpm_manual_download": "Ручная загрузка",
   "plugin_wpm_start_using": "Начать использовать",
   "plugin_wpm_install_failed": "Не удалось установить плагин",
   "plugin_install_progress_starting_download": "Начало загрузки...",
