feat: add uninstall progress callbacks and update UI notifications for plugin uninstallation

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -598,6 +598,11 @@
   "plugin_install_progress_complete": "Installation complete",
   "plugin_install_progress_preparing": "Preparing script plugin installation...",
   "plugin_install_progress_parsing": "Parsing plugin metadata...",
+  "plugin_uninstall_progress_preparing": "Preparing uninstall...",
+  "plugin_uninstall_progress_removing": "Removing plugin files...",
+  "plugin_uninstall_progress_cleaning_settings": "Cleaning plugin settings...",
+  "plugin_uninstall_progress_unloading": "Stopping plugin...",
+  "plugin_uninstall_progress_complete": "Uninstall complete",
   "plugin_wpm_reload": "Reload",
   "plugin_wpm_open_directory": "Open plugin directory",
   "plugin_wpm_open_directory_failed": "Failed to open plugin directory: %s",
